<resources>
    <string name="app_name">Lisa\'s Italian Restaurant</string>
    <string name="location"> Location: 104 Grafton St, Dublin, CA 94568 </string>
    <string name="phone">Phone no.: 510&#8211;111&#8211;1111</string>
    <string name="email">Contact us: info@lisasResturant.com</string>
    <string name="url">Website: www.lisasrestaurant.com</string>
    <string name="hours">Hours: Everyday from 11AM-10PM </string>
    <string name="description">Come and try authentic Italian food in your neighborhood. We take Party Reservations.</string>

    <string name="headerImage">Header Image</string>
    <string name="topImage">Top Image</string>
    <string name="bottomImage">Bottom Image</string>

</resources>
